# replica-render

./: .gitignore  .gitmodules  CMakeLists.txt  README.md
ReplicaSDK/: CMakeLists.txt
ReplicaSDK/include/: Assert.h  DataIO.h  FileMemMap.h  PTexLib.h
ReplicaSDK/ptex/: DataIO.cpp  EGL.cpp  FileMemMap.cpp  PLYParser.cpp  PTexLib.cpp
ReplicaSDK/shaders/: common.glsl  mesh-motionflow.frag  mesh-motionflow.geom  mesh-motionflow.vert  mesh-ptex-pano-depth.frag  mesh-ptex-pano-depth.geom  mesh-ptex-pano-depth.vert  mesh-ptex-pano-motionflow.geom  mesh-ptex-pano.frag  mesh-ptex-pano.geom  mesh-ptex-pano.vert  mesh-ptex.frag  mesh_split.glsl
ReplicaSDK/src/: openGL_version.cpp  render.cpp  renderCubemap.cpp  renderPanorama.cpp
config_files/apartment_0_circ/: config.json
config_files/apartment_0_line/: config.json
config_files/apartment_0_rand/: config.json
config_files/apartment_1_circ/: config.json
config_files/apartment_1_line/: config.json
config_files/apartment_1_rand/: config.json
config_files/apartment_2_circ/: config.json
config_files/apartment_2_line/: config.json
config_files/apartment_2_rand/: config.json
config_files/frl_apartment_0_circ/: config.json
config_files/frl_apartment_0_line/: config.json
config_files/frl_apartment_0_rand/: config.json
config_files/frl_apartment_1_circ/: config.json
config_files/frl_apartment_1_line/: config.json
config_files/frl_apartment_1_rand/: config.json
config_files/frl_apartment_2_circ/: config.json
config_files/frl_apartment_2_line/: config.json
config_files/frl_apartment_2_rand/: config.json
config_files/frl_apartment_3_circ/: config.json
config_files/frl_apartment_3_line/: config.json
config_files/frl_apartment_3_rand/: config.json
config_files/frl_apartment_4_circ/: config.json
config_files/frl_apartment_4_line/: config.json
config_files/frl_apartment_4_rand/: config.json
config_files/frl_apartment_5_circ/: config.json
config_files/frl_apartment_5_line/: config.json
config_files/frl_apartment_5_rand/: config.json
config_files/hotel_0_circ/: config.json
config_files/hotel_0_line/: config.json
config_files/hotel_0_rand/: config.json
config_files/office_0_circ/: config.json
config_files/office_0_line/: config.json
config_files/office_0_rand/: config.json
config_files/office_1_circ/: config.json
config_files/office_1_line/: config.json
config_files/office_1_rand/: config.json
config_files/office_2_circ/: config.json
config_files/office_2_line/: config.json
config_files/office_2_rand/: config.json
config_files/office_3_circ/: config.json
config_files/office_3_line/: config.json
config_files/office_3_rand/: config.json
config_files/office_4_circ/: config.json
config_files/office_4_line/: config.json
config_files/office_4_rand/: config.json
config_files/room_0_circ/: config.json
config_files/room_0_line/: config.json
config_files/room_0_rand/: config.json
config_files/room_1_circ/: config.json
config_files/room_1_line/: config.json
config_files/room_1_rand/: config.json
config_files/room_2_circ/: config.json
config_files/room_2_line/: config.json
config_files/room_2_rand/: config.json
python/: replica_camera_pose.py  replica_post_process.py  replica_render.py
python/utility/: depth_io.py  fs_utility.py  image_io.py
